--- a/src/gui/program_image_widget.ui
+++ b/src/gui/program_image_widget.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>276</width>
-    <height>295</height>
+    <width>300</width>
+    <height>300</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>300</width>
+    <height>300</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -22,14 +28,14 @@
      <item>
       <widget class="QPushButton" name="pushButtonZoomIn">
        <property name="text">
-        <string>ZoomIn</string>
+        <string>Zoom In</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="pushButtonZoomOut">
        <property name="text">
-        <string>ZoomOut</string>
+        <string>Zoom Out</string>
        </property>
       </widget>
      </item>
